<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/landing_page_background_02"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/landing_students_icon"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:src="@drawable/landing_students_icon"
            android:layout_marginBottom="300dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintTop_toBottomOf="@+id/landing_students_icon">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/main_btnLogIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="10sp"
                android:layout_marginRight="20sp"
                android:padding="12dp"
                android:text="Log In"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:cornerRadius="8dp"
                app:layout_constraintBottom_toTopOf="@id/main_btnSignUp"
                app:layout_constraintTop_toTopOf="parent"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/main_btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="70sp"
                android:layout_marginRight="20sp"
                android:backgroundTint="@color/black"
                android:padding="12dp"
                android:text="Sign Up"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:cornerRadius="8dp"

                app:layout_constraintBottom_toBottomOf="parent"/>
        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>